[package]
name = "cubegpu"
version = "0.1.0"
authors = ["Jon Valdés <jon@valdes.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git= "https://github.com/gfx-rs/wgpu-rs.git", rev="2374b8ec9ddbc058dd0237856fc30d33e6ff8f93"}
winit = "0.20"
zerocopy = "0.2"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
glsl-to-spirv = "0.1"

